--- a/css/general.css
+++ b/css/general.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Source Code Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     background-color: #fafafa;
     color: #333;
@@ -50,6 +50,8 @@ h1 {
     border-bottom: 2px solid #3498db;
     text-align: center;
     margin-bottom: 1em;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700;
 }
 
 @media (max-width: 600px) {
@@ -62,4 +64,25 @@ h1 {
         padding: 0.5rem;
         margin: 0;
     }
+}
+
+@font-face {
+    font-family: 'Roboto Slab';
+    src: url(../assets/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf);
+    font-weight: 100 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Outfit';
+    src: url(../assets/fonts/Outfit/Outfit-VariableFont_wght.ttf);
+    font-weight: 100 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Code Pro';
+    src: url(../assets/fonts/Source_Code_Pro/SourceCodePro-VariableFont_wght.ttf);
+    font-weight: 100 900;
+    font-style: normal;
 }
