--- a/css/visualization.css
+++ b/css/visualization.css
@@ -8,21 +8,22 @@
     border: 1px solid rgba(233, 69, 96, 0.2);
 }
 
-.canvas__wrapper {
+.visuals_wrapper {
     width: 100%;
     margin-top: 2rem;
 }
 
-.canvas__wrapper h3 {
+.visuals_wrapper h3 {
     text-align: center;
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 0.5px;
     position: relative;
-    padding-bottom: 0.75rem;}
+    padding-bottom: 0.75rem;
+}
 
-.canvas__wrapper h3::after {
+.visuals_wrapper h3::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -53,21 +54,21 @@
         flex-direction: row;
         align-items: stretch;
     }
-    
-    .intro__wrapper {
+
+    .details__wrapper {
         flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding-right: 3rem;
     }
-    
-    .canvas__wrapper {
+
+    .visuals_wrapper {
         flex: 1;
         display: flex;
         flex-direction: column;
     }
-    
+
     .topic-radar-container {
         flex: 1;
         min-height: 450px;
@@ -79,11 +80,14 @@
     .resources-links {
         margin-bottom: 15vh;
     }
-    
-    .canvas__wrapper {
+
+    .visuals_wrapper {
+        width: 100%;
+        height: 100%;
+        padding: 10rem;
         flex: 1.2;
     }
-    
+
     .topic-radar-container {
         height: 700px;
     }
@@ -95,12 +99,13 @@
         flex-direction: column;
         gap: 3rem;
     }
-    
-    .intro__wrapper {
+
+    .details__wrapper {
         text-align: center;
     }
-    
+
     .topic-radar-container {
         height: 400px;
     }
 }
+
